[metadata]
name = viper
version = file: viper/version
url = https://cascode-lab.github.io/conda-virtuoso
license = MIT
author = Curtis Mayberry
author_email = Curtisma3@gmail.com
description = Integrated circuit design environment

[options]
packages = find:
include_package_data = True

[options.packages.find]
exclude=tests

[options.package_data]
DataPanels = version
* = *.csv
    *.pptx
    *.xlsx
    *.png
    *.gif
    *.jpg

[options.entry_points]
console_scripts =
    sp=viper.sp:sp
    viper=viper.cli:viper
